--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "taxi-company",
+  "name": "Anr_travels",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
