--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "sitemap": "next-sitemap --next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "12.0.9",
+    "next-sitemap": "^4.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
